# backend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  ci_db  db.sqlite3  docker-compose.yml  nginx.conf  pyproject.toml
.github/workflows/: build.yml  checks.yml  deploy.yml
app/address/: models.py  serializers.py  tests.py  urls.py  views.py
app/carts/: admin.py  models.py  serializers.py  views.py
app/orders/: constants.py  exceptions.py  permissions.py  signals.py  urls.py
app/products/: apps.py  models.py  serializers.py  signals.py  urls.py  views.py
app/reviews/: admin.py  apps.py  models.py  serializers.py  views.py
app/sellers/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
app/user_auth/: apps.py  serializers.py  urls.py  utils.py  views.py
app/users/: admin.py  apps.py  models.py  serializers.py  urls.py  utils.py  views.py
app/wishlists/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
carts/: admin.py  models.py  serializers.py  urls.py  views.py
carts/migrations/: 0001_initial.py  0002_initial.py
config/: settings.py  urls.py
config/settings/: base.py  dev.py  prod.py
orders/: admin.py  constants.py  exceptions.py  permissions.py  urls.py  utils.py
products/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
reviews/: admin.py  models.py  urls.py  views.py
scripts/: run.sh
sellers/: models.py  serializers.py  urls.py  views.py
users/: admin.py  apps.py  models.py  serializers.py  urls.py  utils.py  views.py
wishlists/: models.py  urls.py
(+91 files in other folders)
