[project]
name = "market-project"
version = "0.1.0"
description = ""
authors = [
    {name = "LuSiEDa",email = "wltlrtmdgus@naver.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.7,<6.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "django-filter (>=25.2,<26.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "drf-yasg (>=1.21.11,<2.0.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "ipython (>=9.6.0,<10.0.0)",
    "drf-spectacular (>=0.28.0,<0.29.0)",
    "django-allauth (>=65.13.0,<66.0.0)",
    "dj-rest-auth[with-social] (>=7.0.1,<8.0.0)",
    "requests (>=2.32.5,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.2"
black = "^25.9.0"
isort = "^7.0.0"

